Fix tweet form line from overflowing tweet container

--- a/src/components/Tweet.css
+++ b/src/components/Tweet.css
@@ -64,7 +64,7 @@ main article {
 }
 
 .tweet-body {
-    width: 95%;
+    width: auto;
     display: flex;
     justify-content: flex-start;
     margin-left: 2em;
